--- a/SaneScanner/OptionCell.xib
+++ b/SaneScanner/OptionCell.xib
@@ -10,53 +10,52 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="122" id="KGk-i7-Jjw" customClass="OptionCell" customModule="SaneScanner" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="122"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="163" id="KGk-i7-Jjw" customClass="OptionCell" customModule="SaneScanner" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="255" height="155"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="122"/>
+                <rect key="frame" x="0.0" y="0.0" width="255" height="155"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="250" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jT3-WE-TG7">
-                        <rect key="frame" x="16" y="11" width="226" height="72"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="1000" verticalHuggingPriority="1000" horizontalCompressionResistancePriority="1000" verticalCompressionResistancePriority="1000" text="Value" textAlignment="right" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dFm-q4-v3b">
+                        <rect key="frame" x="197" y="11" width="42" height="20.5"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <fontDescription key="fontDescription" style="UICTFontTextStyleBody"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="1000" verticalHuggingPriority="251" text="Value" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dFm-q4-v3b">
-                        <rect key="frame" x="262" y="11" width="42" height="20.5"/>
-                        <fontDescription key="fontDescription" style="UICTFontTextStyleBody"/>
-                        <nil key="textColor"/>
-                        <nil key="highlightedColor"/>
-                    </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="1000" text="Description" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Bez-aE-DFN">
-                        <rect key="frame" x="16" y="93" width="288" height="18"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="1000" verticalHuggingPriority="999" horizontalCompressionResistancePriority="1000" verticalCompressionResistancePriority="999" text="Description" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Bez-aE-DFN">
+                        <rect key="frame" x="16" y="126" width="223" height="18"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <fontDescription key="fontDescription" style="UICTFontTextStyleSubhead"/>
+                        <nil key="textColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="750" verticalHuggingPriority="1000" verticalCompressionResistancePriority="1000" text="Option title" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jT3-WE-TG7">
+                        <rect key="frame" x="16" y="11" width="84" height="20.5"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <fontDescription key="fontDescription" style="UICTFontTextStyleBody"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                 </subviews>
                 <constraints>
-                    <constraint firstAttribute="trailingMargin" secondItem="dFm-q4-v3b" secondAttribute="trailing" id="3c2-fn-dES"/>
-                    <constraint firstItem="Bez-aE-DFN" firstAttribute="top" secondItem="jT3-WE-TG7" secondAttribute="bottom" constant="10" id="4lJ-u5-dZh"/>
-                    <constraint firstItem="dFm-q4-v3b" firstAttribute="leading" secondItem="jT3-WE-TG7" secondAttribute="trailing" constant="20" id="M9a-iX-c9l"/>
-                    <constraint firstAttribute="bottomMargin" secondItem="Bez-aE-DFN" secondAttribute="bottom" priority="750" id="RZS-UX-OT5"/>
-                    <constraint firstItem="dFm-q4-v3b" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" id="Sbw-5a-Ijf"/>
-                    <constraint firstItem="jT3-WE-TG7" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" id="UdN-Ca-Vr1"/>
-                    <constraint firstItem="Bez-aE-DFN" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" id="qCg-qX-4Ox"/>
-                    <constraint firstItem="jT3-WE-TG7" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" id="sOS-xy-xXe"/>
-                    <constraint firstItem="dFm-q4-v3b" firstAttribute="bottom" relation="lessThanOrEqual" secondItem="H2p-sc-9uM" secondAttribute="bottomMargin" id="ujn-gx-Ncq"/>
-                    <constraint firstAttribute="trailingMargin" secondItem="Bez-aE-DFN" secondAttribute="trailing" id="wu4-64-yhc"/>
+                    <constraint firstItem="dFm-q4-v3b" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" placeholder="YES" id="0gM-8o-2vc"/>
+                    <constraint firstItem="Bez-aE-DFN" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" placeholder="YES" id="2tb-m3-vB7"/>
+                    <constraint firstAttribute="bottomMargin" secondItem="Bez-aE-DFN" secondAttribute="bottom" placeholder="YES" id="Hrg-gD-uHy"/>
+                    <constraint firstItem="Bez-aE-DFN" firstAttribute="trailing" secondItem="H2p-sc-9uM" secondAttribute="trailingMargin" placeholder="YES" id="Oae-AE-Amc"/>
+                    <constraint firstItem="jT3-WE-TG7" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" placeholder="YES" id="YM7-b5-Scb"/>
+                    <constraint firstAttribute="trailingMargin" secondItem="dFm-q4-v3b" secondAttribute="trailing" placeholder="YES" id="fJX-rc-9Ih"/>
+                    <constraint firstItem="jT3-WE-TG7" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" placeholder="YES" id="kj0-JQ-BrP"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
-                <outlet property="constraingLabelDescrTop" destination="4lJ-u5-dZh" id="EPA-93-aCE"/>
-                <outlet property="labelDescr" destination="Bez-aE-DFN" id="vqD-I9-92u"/>
-                <outlet property="labelTitle" destination="jT3-WE-TG7" id="8XK-ic-mXv"/>
-                <outlet property="labelValue" destination="dFm-q4-v3b" id="hSA-rd-UzS"/>
+                <outlet property="descrLabel" destination="Bez-aE-DFN" id="UHH-Ts-pzM"/>
+                <outlet property="titleLabel" destination="jT3-WE-TG7" id="mKp-eR-Iij"/>
+                <outlet property="valueLabel" destination="dFm-q4-v3b" id="BGO-16-257"/>
             </connections>
-            <point key="canvasLocation" x="137.59999999999999" y="188.90554722638683"/>
+            <point key="canvasLocation" x="-76" y="53.523238380809602"/>
         </tableViewCell>
     </objects>
 </document>
