--- a/SaneScanner/VCs/DevicePreviewVC.xib
+++ b/SaneScanner/VCs/DevicePreviewVC.xib
@@ -25,7 +25,7 @@
             <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="2oD-2M-AeB" customClass="SanePreviewView" customModule="SaneScanner" customModuleProvider="target">
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="2oD-2M-AeB" customClass="PreviewView" customModule="SaneScanner" customModuleProvider="target">
                     <rect key="frame" x="0.0" y="44" width="282" height="818"/>
                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                 </view>
