--- a/SaneScanner/VCs/PreferencesVC.xib
+++ b/SaneScanner/VCs/PreferencesVC.xib
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="21507" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21505"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -19,6 +20,13 @@
             <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Ybu-n7-4Ck" userLabel="Disable navBar collapse">
+                    <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    <constraints>
+                        <constraint firstAttribute="width" id="Dek-ig-wP8"/>
+                        <constraint firstAttribute="height" id="RXF-ZP-JLR"/>
+                    </constraints>
+                </view>
                 <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" contentInsetAdjustmentBehavior="scrollableAxes" style="grouped" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="18" sectionFooterHeight="18" translatesAutoresizingMaskIntoConstraints="NO" id="3du-Yi-VLC">
                     <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -31,7 +39,9 @@
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
+                <constraint firstItem="Ybu-n7-4Ck" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="22X-R7-06b"/>
                 <constraint firstAttribute="trailing" secondItem="3du-Yi-VLC" secondAttribute="trailing" id="3b0-pm-Tmg"/>
+                <constraint firstItem="Ybu-n7-4Ck" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" id="Qba-yE-PYI"/>
                 <constraint firstAttribute="bottom" secondItem="3du-Yi-VLC" secondAttribute="bottom" id="VQt-EM-1qm"/>
                 <constraint firstItem="3du-Yi-VLC" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="f1v-gR-9C2"/>
                 <constraint firstItem="3du-Yi-VLC" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" id="zZo-mX-9d7"/>
@@ -39,4 +49,9 @@
             <point key="canvasLocation" x="138" y="144"/>
         </view>
     </objects>
+    <resources>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+    </resources>
 </document>
